2009-08-17  Angelo Corsaro  <angelocorsaro@gmail.com>

	* demo/ping/ping-*.cpp: updated to reflect changes in the SIMD API.

2009-08-16  Angelo Corsaro  <angelo.corsaro@gmail.com>

	* src/simd/condition.cpp:
	* src/simd/condition.hpp:
	* src/simd/reader.hpp

	  Added support for waitset and conditions. SIMD also provides a
	  new kind of Condition which can dispatch call to a specified
	  functor. 

2009-08-12  Angelo Corsaro  <angelo.corsaro@gmail.com>

	* src/simd/*.hpp: removed forward declaration of classes within
	the simd namespace to work around some parsing issues that were
	preventing proper code-aid in NetBeans.

	* configure: Now also adds required BOOST libraries from what
	installed on the target machien (previously BOOST 1.39.0 was
	assumed)
	
	* README: Removed reference to the SWATCH project.
	
	* src/simd/writer.hpp: addedd missing "return" on write methods.
        * src/simd/reader.hpp: removed scope qualifier to address compilation
          issues with gcc 4.2.

	Thanks to Reynald Bourtembourg for catchings this.

2009-07-20  Angelo Corsaro  <angelo.corsaro@gmail.com>

	* Release SIMD v0.1-alpha
