@@ -1,3 +1,13 @@
+2009-08-21  Angelo Corsaro  <angelo.corsaro@gmail.com>
+
+	* src/simd/simd.hpp:
+	* src/simd/simd.cpp: Main header file that application need to include.
+
+	* src/simd/waitset.hpp:
+	* src/simd/waitset.cpp: Implemented SIMD executable waitset.
+
+	* src/simd/reader.hpp: Added registration logic for listener events.
+
 2009-08-17  Angelo Corsaro  <angelocorsaro@gmail.com>
 
 	* demo/ping/ping-*.cpp: updated to reflect changes in the SIMD API.
